<resources>
    <string name="app_name">WeatherApp</string>

    <!-- Dynamic Content-->
    <string name="txt_last_update">Last Update: %1$s</string>
    <string name="txt_temp_f_degree">%1$s \u00B0F</string>
    <string name="txt_temp_range_f_degree">%1$s \u00B0F - %2$s \u00B0F</string>
    <string name="txt_wind_speed">Wind: %1$s miles/hour</string>
    <string name="txt_pressure">Pressure: %1$s hPa</string>
    <string name="txt_humidity">Humidity: %1$s %%</string>
    <string name="txt_sunrise_time">Sunrise: %1$s</string>
    <string name="txt_sunset_time">Sunset: %1$s</string>

    <!-- Hints-->
    <string name="search_hint">Search&#8230;</string>

    <!-- Dummy Texts-->
    <string name="city_name_dummy">New York, US</string>
    <string name="cur_date_dummy">Sun, Feb 5, 2017</string>
    <string name="last_update_dummy">Last Update: 10:20 AM</string>
    <string name="temp_dummy">30 \u00B0F</string>
    <string name="temp_range_dummy">22 \u00B0F - 35 \u00B0F</string>
    <string name="weather_desc_dummy">Light Rain</string>
    <string name="wind_speed_dummy">Wind: 18.34 miles/hour</string>
    <string name="pressure_dummy">Pressure: 1008.0 hPa</string>
    <string name="humidity_dummy">Humidity: 69 %</string>
    <string name="sunrise_time_dummy">Sunrise: 5:20 AM</string>
    <string name="sunset_time_dummy">Sunset: 6:30 PM</string>

</resources>
