<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_today_weather"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    android:padding="20dp">

    <TextView
        android:id="@+id/txt_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_name_dummy"
        android:textColor="@color/grey_white_1000"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/cur_date_dummy"
        android:textColor="@color/grey_white_1000"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_last_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_date"
        android:layout_marginTop="5dp"
        android:text="@string/last_update_dummy"
        android:textColor="@color/grey_300"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/ic_weather"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_last_update_time"
        android:layout_marginTop="20dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_cloud" />

    <TextView
        android:id="@+id/txt_temp_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_city_name"
        android:layout_marginTop="20dp"
        android:text="@string/temp_dummy"
        android:textColor="@color/grey_white_1000"
        android:textSize="22dp" />


    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_temp_range"
        android:layout_marginTop="5dp"
        android:text="@string/weather_desc_dummy"
        android:textColor="@color/grey_200"
        android:textSize="16dp" />

    <LinearLayout
        android:id="@+id/layout_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_desc"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_temp_range"
            android:layout_marginTop="5dp"
            android:text="@string/wind_speed_dummy"
            android:textColor="@color/grey_200"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/txt_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_temp_range"
            android:layout_marginTop="5dp"
            android:text="@string/pressure_dummy"
            android:textColor="@color/grey_200"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/txt_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_temp_range"
            android:layout_marginTop="5dp"
            android:text="@string/humidity_dummy"
            android:textColor="@color/grey_200"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/txt_sunrise_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_temp_range"
            android:layout_marginTop="5dp"
            android:text="@string/sunrise_time_dummy"
            android:textColor="@color/grey_200"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/txt_sunset_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_temp_range"
            android:layout_marginTop="5dp"
            android:text="@string/sunset_time_dummy"
            android:textColor="@color/grey_200"
            android:textSize="16dp" />
    </LinearLayout>

</RelativeLayout>