<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="@color/grey_200">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/txt_future_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cur_date_dummy"
            android:textColor="@color/grey_black_1000"
            android:textSize="18dp" />


        <TextView
            android:id="@+id/txt_temp_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/temp_range_dummy"
            android:textColor="@color/grey_900"
            android:textSize="18dp" />


        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_future_date"
            android:layout_marginTop="5dp"
            android:text="@string/weather_desc_dummy"
            android:textColor="@color/grey_800"
            android:textSize="16dp" />


        <ImageView
            android:id="@+id/ic_weather"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/txt_temp_range"
            android:layout_alignParentRight="true"
            android:scaleType="centerInside"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_cloud" />

        <LinearLayout
            android:id="@+id/layout_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_desc"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_temp_range"
                android:layout_marginTop="5dp"
                android:text="@string/wind_speed_dummy"
                android:textColor="@color/grey_700"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txt_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_temp_range"
                android:layout_marginTop="5dp"
                android:text="@string/pressure_dummy"
                android:textColor="@color/grey_700"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txt_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_temp_range"
                android:layout_marginTop="5dp"
                android:text="@string/humidity_dummy"
                android:textColor="@color/grey_700"
                android:textSize="16dp" />
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>
